spacing & 2 col issues fix

--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@ body {
 
 .padding {
     padding: 2rem 0;
+    
 }
 
 h6{
@@ -80,8 +81,12 @@ h4{
     -moz-box-shadow: 10px 10px 20px 1px rgb(82,104,83, 1);
      box-shadow: 10px 10px 20px 1px rgb(82,104,83, 1);
      background-color: rgb(174,211,184);
-     border: .125rem solid rgb(82,104,83, 1)
+     border: .125rem solid rgb(82,104,83, 1);
+     margin-bottom: 2rem;
+    
 }
+
+
 
 
 
@@ -116,10 +121,9 @@ h4{
 }
 
 .form-control {
-    border: .063rem solid #f3f3f3; 
+    border: .063rem solid #f3f3f3;
     font-weight: 400;
-    font-size: 0.875rem;
-    font-size: 1rem;
+    font-size: .8rem;
     border: .063rem solid #ced4da;
     border-radius: .125rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
@@ -235,21 +239,28 @@ input[type="text"]:focus, input[type="number"]:focus{
     line-height: 20px;
     text-align: center
 } 
+*/
 
 .btn {
-    font-size: 0.875rem;
+    font-size: 0.8rem;
     line-height: 1;
-    font-weight: 400;
-    padding: .7rem 1.5rem;
+    /* font-weight: 400; */
+    /* padding: .2rem 1.3rem; */
     border-radius: 0.1275rem
 }
-*/
+
+
+
+
+
+
 
 @media (max-width:1259px) {
     h2{
         font-size: 4.8rem;
         top: 80px;
     }
+  
 }
 
 @media (max-width:1015px) {
@@ -261,6 +272,7 @@ input[type="text"]:focus, input[type="number"]:focus{
         font-size: 4rem;
         top: 65px;
     }
+   
 }
 
 
@@ -269,6 +281,7 @@ input[type="text"]:focus, input[type="number"]:focus{
         font-size: 3.5rem;
         top: 55px
     }
+   
 
   
 }
@@ -308,6 +321,10 @@ input[type="text"]:focus, input[type="number"]:focus{
         margin-left: 2rem;
     }
 }
+
+
+
+
 
 
 
